# docker-sre-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docker_sre_agent/: __init__.py  agent.py  config.py  docker_client.py  llm.py  main.py  prompts.py  scanner.py  scheduler.py  web.py
docker_sre_agent/templates/: chat.html
docker_sre_agent/tools/: __init__.py  base.py  command.py  disk.py  docker.py  logs.py
docs/superpowers/plans/: 2026-06-18-server-sre-agent-v1.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/superpowers/specs/: 2026-06-18-agent-architecture-redesign.md  2026-06-18-minimal-docker-sre-agent-design.md  2026-06-18-server-sre-agent-v1-design.md
server_sre_agent/: __init__.py  agent.py  config.py  docker_client.py  llm.py  main.py  prompts.py  scanner.py  scheduler.py  web.py
server_sre_agent/templates/: chat.html
server_sre_agent/tools/: __init__.py  base.py  docker.py  host.py
tests/: test_tools.py
