[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server-sre-agent"
version = "0.1.0"
description = "Lightweight server SRE agent for small cloud servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
server-sre = "server_sre_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server_sre_agent"]
